New held out day perf

--- a/src/neural_decoder/n_gram_lm_cort.ipynb
+++ b/src/neural_decoder/n_gram_lm_cort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -52,6 +52,26 @@
     "import math\n",
     "\n",
     "from tta_utils import convert_sentence, compute_lambda, clean_transcription, get_phonemes, get_data_file, reverse_dataset, get_dataloader, decode_sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([20,  2, 31, 40]), tensor([4]))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_phonemes('cat')"
    ]
   },
   {
@@ -127,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,9 +155,9 @@
     "                 'neurips_transformer_time_masked_held_out_days_1',\n",
     "                 'neurips_transformer_time_masked_held_out_days']\n",
     "\n",
-    "shared_output_file = 'TEST'\n",
-    "val_save_file = 'TEST'\n",
-    "seeds_list = [0,1,2,3]\n",
+    "shared_output_file = 'recal_more_data'\n",
+    "val_save_file = 'recal_more_data'\n",
+    "seeds_list = [0]\n",
     "\n",
     "if len(shared_output_file) > 0:\n",
     "    write_mode = \"a\"\n",
@@ -160,24 +180,10 @@
     "    'num_masks': 0\n",
     "}\n",
     "\n",
-    "# cort\n",
-    "cort_args = {\n",
-    "    'learning_rate': [3e-5, 6e-5, 6e-5], \n",
-    "    'nptl_augs': 0, \n",
-    "    'nptl_aug_params': [0.2, 0.5], \n",
-    "    'max_mask_pct': 0.05, \n",
-    "    'num_masks': 20,\n",
-    "    'TM_augs': 16,\n",
-    "    'adaptation_steps': 1,\n",
-    "    'dropout': 0, \n",
-    "    'l2_decay': 0, \n",
-    "    'input_dropout': 0, \n",
-    "    'temperature': 1, \n",
-    "    'WN+BS': False,\n",
-    "}\n",
-    "\n",
+    "# corp\n",
     "corp_args = {\n",
-    "    'learning_rate': [1e-5, 1e-3, 1e-3], \n",
+    "    'learning_rate': [1e-3, 1e-3, 1e-3], \n",
+    "    'repeats': 64,\n",
     "    'adaptation_steps': 1,\n",
     "    'WN+BS': True,\n",
     "    'white_noise': 0.2,\n",
@@ -185,12 +191,10 @@
     "    'dropout': 0.35, \n",
     "    'input_dropout': 0.2, \n",
     "    'l2_decay': 1e-5, \n",
-    "    'TM_augs': 64,\n",
-    "    'max_mask_pct': 0.05, \n",
+    "    'max_mask_pct': 0.075, \n",
     "    'num_masks': 20, \n",
     "    'freeze_patch': True\n",
     "}\n",
-    "\n",
     "\n",
     "tta_mode = 'corp'\n",
     "\n",
@@ -199,14 +203,14 @@
     "else:\n",
     "    updated_args = baseline_args\n",
     "\n",
-    "skip_models = ['neurips_transformer_time_masked_held_out_days_1', \n",
-    "               'neurips_transformer_time_masked_held_out_days']\n",
+    "skip_models = [\"neurips_transformer_time_masked_held_out_days\", \n",
+    "               \"neurips_transformer_time_masked_held_out_days_2\"]\n",
     "skip_seeds = [1,2,3]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,34 +241,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running model: neurips_transformer_time_masked_held_out_days_2_seed_0\n",
-      "1e-05\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_1_seed_0\n",
       "day  0\n",
-      "DAY WER:  0.4137044967880086\n",
+      "DAY WER:  0.2281067556296914\n",
       "day  1\n",
-      "DAY WER:  0.48501026694045174\n",
+      "DAY WER:  0.2571428571428571\n",
       "day  2\n",
-      "DAY WER:  0.9747211895910781\n",
+      "DAY WER:  0.2921945239068247\n",
       "day  3\n",
-      "DAY WER:  1.0\n",
+      "DAY WER:  0.24347454000855798\n",
       "day  4\n",
-      "DAY WER:  1.0\n",
-      "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days_2\n"
+      "DAY WER:  0.20142002989536623\n",
+      "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days_1\n"
      ]
     }
    ],
    "source": [
-    "#day_edit_distance = 0\n",
-    "#day_seq_length = 0\n",
-    "lambda_value_storage = []\n",
-    "loss_arr = []\n",
     "for mn, model_name_str in enumerate(models_to_run):\n",
     "    \n",
     "    if model_name_str in skip_models:\n",
@@ -310,13 +309,13 @@
     "                                          weight_decay=updated_args['l2_decay'],\n",
     "                                            betas=(args['beta1'], args['beta2']))\n",
     "\n",
-    "        if updated_args['freeze_patch']:\n",
-    "            for name, p in model.named_parameters():\n",
-    "                p.requires_grad = name in {\n",
-    "                    \"to_patch_embedding.1.weight\", \"to_patch_embedding.1.bias\",\n",
-    "                    \"to_patch_embedding.2.weight\", \"to_patch_embedding.2.bias\",\n",
-    "                    \"to_patch_embedding.3.weight\", \"to_patch_embedding.3.bias\"\n",
-    "                }\n",
+    "            if updated_args['freeze_patch']:\n",
+    "                for name, p in model.named_parameters():\n",
+    "                    p.requires_grad = name in {\n",
+    "                        \"to_patch_embedding.1.weight\", \"to_patch_embedding.1.bias\",\n",
+    "                        \"to_patch_embedding.2.weight\", \"to_patch_embedding.2.bias\",\n",
+    "                        \"to_patch_embedding.3.weight\", \"to_patch_embedding.3.bias\"\n",
+    "                    }\n",
     "\n",
     "        testDayIdxs = np.arange(5)\n",
     "        valDayIdxs = [0, 1, 3, 4, 5] if mn == 2 else [0, 1, 2, 3, 4]\n",
@@ -332,7 +331,7 @@
     "            print(\"day \", i)\n",
     "            \n",
     "            ve = valDayIdxs[i]\n",
-    "            \n",
+    "        \n",
     "            val_ds = reverse_dataset(SpeechDataset([loadedData['test'][ve]], return_transcript=True))\n",
     "            test_ds = reverse_dataset(SpeechDataset([loadedData['competition'][i]], return_transcript=True))\n",
     "            combined_ds = ConcatDataset([val_ds, test_ds])\n",
@@ -341,42 +340,57 @@
     "            transcriptions_list = []\n",
     "            decoded_list = []\n",
     "            \n",
+    "            test_day_decoded_sents = []\n",
+    "            \n",
     "            for trial_idx, (X, y, X_len, y_len, _, transcript) in enumerate(data_loader):\n",
     "                            \n",
     "                total_start = time.time()\n",
     "                \n",
-    "                decoded = None\n",
-    "\n",
     "                X, y, X_len, y_len = map(lambda x: x.to(device), [X, y, X_len, y_len])\n",
     "                dayIdx = torch.tensor([ve], dtype=torch.int64).to(device)\n",
     "                adjusted_len = model.compute_length(X_len)\n",
     "                \n",
     "                # obtain beam search + LM corrected outputs\n",
+    "                # do this before adaptation on that trial to make \n",
+    "                # sure results are compatabile with a streaming system \n",
     "                model.eval()\n",
-    "                logits_eval = model(X, X_len, ve, 0, 0, [0,0])\n",
+    "                logits_eval = model(X, X_len, ve)\n",
     "                decoded, y_pseudo, y_len_pseudo = get_lm_outputs(logits_eval)\n",
     "                \n",
-    "                    \n",
     "                if tta_mode != 'baseline':\n",
+    "                \n",
+    "                    # generate multiple versions of the same input\n",
+    "                    if updated_args['repeats'] > 0:\n",
+    "                        \n",
+    "                        X = X.repeat(updated_args['repeats'], 1, 1)\n",
+    "                        y = y.repeat(updated_args['repeats'], 1)\n",
+    "                        y_len = y_len.repeat(updated_args['repeats'])\n",
+    "                        X_len = X_len.repeat(updated_args['repeats'])\n",
+    "                        adjusted_len = adjusted_len.repeat(updated_args['repeats'])\n",
+    "                        y_pseudo = y_pseudo.unsqueeze(0).repeat(updated_args['repeats'], 1).to(device) \n",
+    "                        y_len_pseudo = y_len_pseudo.repeat(updated_args['repeats']).to(device)\n",
+    "                        \n",
     "                    \n",
-    "                    if updated_args['TM_augs'] > 0:\n",
-    "                        # repeat # of aug times\n",
-    "                        adjusted_len_repeat = adjusted_len.unsqueeze(0).repeat(updated_args['TM_augs'], 1)\n",
-    "                        y_pseudo = y_pseudo.unsqueeze(0).repeat(updated_args['TM_augs'], 1).to(device)\n",
-    "                        y_len_pseudo = y_len_pseudo.unsqueeze(0).repeat(updated_args['TM_augs'], 1).to(device)\n",
-    "                                        \n",
+    "                    # add white noise and baseline shift augmentations to each sample\n",
+    "                    if updated_args['WN+BS'] == True:\n",
+    "                        \n",
+    "                        X += torch.randn(X.shape, \n",
+    "                                    device=device) * updated_args['white_noise']\n",
+    "                    \n",
+    "                        X += (\n",
+    "                            torch.randn([X.shape[0], 1, X.shape[2]], \n",
+    "                            device=device)\n",
+    "                            * updated_args['baseline_shift']\n",
+    "                        )      \n",
+    "                    \n",
+    "                          \n",
     "                    model.train()\n",
     "\n",
     "                    for _ in range(updated_args['adaptation_steps']):\n",
     "                \n",
-    "                        # (augs + 1 x T x C), first sample is not augmented \n",
-    "                        logits = model(X, X_len, ve, updated_args['TM_augs'], 0, [0,0])\n",
-    "                            \n",
-    "                        #cort_loss = memo_loss_from_logits(logits, adjusted_len, blank_id, updated_args['temperature'])\n",
-    "            \n",
-    "                        corp_loss = forward_ctc(logits, adjusted_len_repeat, y_pseudo, y_len_pseudo)\n",
+    "                        logits = model(X, X_len, ve)\n",
     "                        \n",
-    "                        #loss = updated_args['cort_coef']*cort_loss + updated_args['corp_coef']*corp_loss\n",
+    "                        corp_loss = forward_ctc(logits, adjusted_len, y_pseudo, y_len_pseudo)\n",
     "                        \n",
     "                        optimizer.zero_grad()\n",
     "                        corp_loss.backward()\n",
@@ -386,91 +400,78 @@
     "                \n",
     "                # get validation performance \n",
     "                if trial_idx < len(val_ds):\n",
-    "                    #for idx in range(logits[0:1].shape[0]):\n",
-    "                        #trueSeq = y[idx][:y_len[idx]].cpu().numpy() \n",
-    "            \n",
+    "     \n",
     "                    decoded_list.append(decoded)\n",
     "                    transcriptions_list.append(clean_transcription(transcript[0]))\n",
-    "                        #dist = SequenceMatcher(a=trueSeq.tolist(), b=decoded.tolist()).distance()\n",
     "\n",
-    "                        #total_edit_distance += dist\n",
-    "                        #total_seq_length += len(trueSeq)\n",
-    "                        #day_edit_distance += dist\n",
-    "                        #day_seq_length += len(trueSeq)\n",
-    "                            \n",
-    "                    # get test set predictions \n",
-    "                    #else:   \n",
-    "                    #    nbest_outputs.append(decoded)\n",
+    "                else:   \n",
+    "                    \n",
+    "                    test_day_decoded_sents.append(decoded)\n",
     "                        \n",
     "            _, wer = _cer_and_wer(decoded_list, transcriptions_list, outputType=\"speech\", returnCI=False)\n",
     "            print(\"DAY WER: \", wer)\n",
     "            day_cer_dict[seed].append(wer)\n",
+    "            nbest_outputs.extend(test_day_decoded_sents[::-1]) # reverse each day back\n",
     "            \n",
-    "            #day_edit_distance = 0 \n",
-    "            #day_seq_length = 0\n",
-    "            \n",
+    "        out_file = os.path.join(saveFolder_transcripts, output_file)\n",
+    "        with open(out_file + '.txt', write_mode, encoding=\"utf-8\") as f:\n",
+    "            f.write(\"\\n\".join(nbest_outputs) + \"\\n\")\n",
+    "        \n",
+    "        \n",
     "    if val_save_file:\n",
     "        print(f\"SAVING VAL RESULTS FOR {model_name_str}\")\n",
     "        with open(f\"{saveFolder_data}{model_name_str}_{val_save_file}.pkl\", \"wb\") as f:\n",
     "            pickle.dump(day_cer_dict, f)\n",
-    "            \n",
-    "            \n",
-    "        #out_file = os.path.join(saveFolder_transcripts, output_file)\n",
-    "        #with open(out_file + '.txt', write_mode, encoding=\"utf-8\") as f:\n",
-    "        #    f.write(\"\\n\".join(nbest_outputs) + \"\\n\")\n",
-    "            \n",
-    "        #model_outputs[\"transcriptions\"] = [convert_sentence(t.strip()) for t in model_outputs[\"transcriptions\"]]\n",
-    "        #nbest_outputs = [t.strip() for t in nbest_outputs]\n",
-    "        #cer, wer = _cer_and_wer(nbest_outputs, model_outputs[\"transcriptions\"],\n",
-    "        #                        outputType='speech', returnCI=True)\n",
-    "        #total_wer_dict[seed] = wer"
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([64, 63, 41])"
+       "torch.Size([64, 83, 41])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "logits.shape"
+    "#### 14 days training, 5 days testing results\n",
+    "\n",
+    "\n",
+    "# held out days 1 \n",
+    "day  0\n",
+    "DAY WER:  0.2281067556296914\n",
+    "day  1\n",
+    "DAY WER:  0.2571428571428571\n",
+    "day  2\n",
+    "DAY WER:  0.2921945239068247\n",
+    "day  3\n",
+    "DAY WER:  0.24347454000855798\n",
+    "day  4\n",
+    "DAY WER:  0.20142002989536623\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor(0.1752, grad_fn=<MeanBackward0>)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (340173537.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[109], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    day  0\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
-   "source": [
-    "corp_loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "##### Highest training data condition #####\n",
     "\n",
@@ -539,7 +540,31 @@
     "day  3\n",
     "DAY WER:  0.7954545454545454\n",
     "day  4\n",
-    "DAY WER:  0.8411253620190319\n"
+    "DAY WER:  0.8411253620190319\n",
+    "\n",
+    "# no TTA\n",
+    "day  0\n",
+    "DAY WER:  0.35460385438972164\n",
+    "day  1\n",
+    "DAY WER:  0.4369609856262834\n",
+    "day  2\n",
+    "DAY WER:  0.6159851301115241\n",
+    "day  3\n",
+    "DAY WER:  0.6416396103896104\n",
+    "day  4\n",
+    "DAY WER:  0.6466694249069094\n",
+    "\n",
+    "# Modified CORP \n",
+    "day  0\n",
+    "DAY WER:  0.33319057815845826\n",
+    "day  1\n",
+    "DAY WER:  0.39383983572895276\n",
+    "day  2\n",
+    "DAY WER:  0.5379182156133829\n",
+    "day  3\n",
+    "DAY WER:  0.5568181818181818\n",
+    "day  4\n",
+    "DAY WER:  0.54530"
    ]
   },
   {
