i think i got it

--- a/src/neural_decoder/n_gram_lm_cort.ipynb
+++ b/src/neural_decoder/n_gram_lm_cort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -56,27 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([20,  2, 31, 40]), tensor([4]))"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_phonemes('cat')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -147,16 +127,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "models_to_run = ['neurips_transformer_time_masked_held_out_days_2', \n",
-    "                 'neurips_transformer_time_masked_held_out_days_1',\n",
-    "                 'neurips_transformer_time_masked_held_out_days']\n",
+    "models_to_run = ['neurips_transformer_time_masked_held_out_days']\n",
     "\n",
-    "shared_output_file = 'recal_more_data'\n",
-    "val_save_file = 'recal_more_data'\n",
+    "shared_output_file = 'transformer_held_out_final'\n",
+    "val_save_file = 'transformer_held_out_final'\n",
+    "\n",
     "seeds_list = [0]\n",
     "\n",
     "if len(shared_output_file) > 0:\n",
@@ -171,18 +150,19 @@
     "blank_id = 0\n",
     "num_classes = 41\n",
     "\n",
-    "\n",
     "# no tta\n",
     "baseline_args = {\n",
     "    'dropout': 0, \n",
     "    'input_dropout': 0, \n",
     "    'max_mask_pct': 0, \n",
-    "    'num_masks': 0\n",
+    "    'num_masks': 0, \n",
+    "    'comp_day_idxs': [0,1,3,4,5]\n",
     "}\n",
     "\n",
     "# corp\n",
     "corp_args = {\n",
-    "    'learning_rate': [1e-3, 1e-3, 1e-3], \n",
+    "    'learning_rate': [1e-3], \n",
+    "    'comp_day_idxs': [0,1,3,4,5],\n",
     "    'repeats': 64,\n",
     "    'adaptation_steps': 1,\n",
     "    'WN+BS': True,\n",
@@ -196,21 +176,21 @@
     "    'freeze_patch': True\n",
     "}\n",
     "\n",
-    "tta_mode = 'corp'\n",
+    "\n",
+    "tta_mode = 'baseline'\n",
     "\n",
     "if tta_mode == 'corp':\n",
     "    updated_args = corp_args  \n",
     "else:\n",
     "    updated_args = baseline_args\n",
     "\n",
-    "skip_models = [\"neurips_transformer_time_masked_held_out_days\", \n",
-    "               \"neurips_transformer_time_masked_held_out_days_2\"]\n",
+    "skip_models = []\n",
     "skip_seeds = [1,2,3]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,25 +221,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running model: neurips_transformer_time_masked_held_out_days_1_seed_0\n",
-      "day  0\n",
-      "DAY WER:  0.2281067556296914\n",
-      "day  1\n",
-      "DAY WER:  0.2571428571428571\n",
-      "day  2\n",
-      "DAY WER:  0.2921945239068247\n",
-      "day  3\n",
-      "DAY WER:  0.24347454000855798\n",
-      "day  4\n",
-      "DAY WER:  0.20142002989536623\n",
-      "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days_1\n"
+      "Running model: neurips_transformer_time_masked_held_out_days_seed_0\n",
+      "day  0\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'comp_day_idxs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[45], line 70\u001b[0m\n\u001b[1;32m     66\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mday \u001b[39m\u001b[39m\"\u001b[39m, day_idx)\n\u001b[1;32m     68\u001b[0m val_ds \u001b[39m=\u001b[39m SpeechDataset([loadedData[\u001b[39m'\u001b[39m\u001b[39mtest\u001b[39m\u001b[39m'\u001b[39m][day_idx]], return_transcript\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m---> 70\u001b[0m \u001b[39mif\u001b[39;00m day_idx \u001b[39min\u001b[39;00m updated_args[\u001b[39m'\u001b[39;49m\u001b[39mcomp_day_idxs\u001b[39;49m\u001b[39m'\u001b[39;49m]:\n\u001b[1;32m     71\u001b[0m     test_day_idx \u001b[39m=\u001b[39m testDays[day_idx\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[1;32m     72\u001b[0m     test_ds \u001b[39m=\u001b[39m SpeechDataset([loadedData[\u001b[39m'\u001b[39m\u001b[39mcompetition\u001b[39m\u001b[39m'\u001b[39m][test_day_idx]], return_transcript\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'comp_day_idxs'"
      ]
     }
    ],
@@ -269,7 +250,7 @@
     "    if model_name_str in skip_models:\n",
     "        continue\n",
     "    \n",
-    "    day_cer_dict, total_wer_dict = {}, {}\n",
+    "    day_wer_dict, total_wer_dict = {}, {}\n",
     "\n",
     "    for seed in seeds_list:\n",
     "        \n",
@@ -278,7 +259,7 @@
     "        \n",
     "        print(f\"Running model: {model_name_str}_seed_{seed}\")\n",
     "        \n",
-    "        day_cer_dict[seed], total_wer_dict[seed] = [], []\n",
+    "        day_wer_dict[seed] = []\n",
     "\n",
     "        modelPath = f\"{model_storage_path}{model_name_str}_seed_{seed}\"\n",
     "        output_file = f\"{shared_output_file}_seed_{seed}\" if shared_output_file else f\"{model_name_str}_seed_{seed}\"\n",
@@ -299,6 +280,9 @@
     "        data_file = get_data_file(args['datasetPath'])\n",
     "\n",
     "        trainLoader, testLoaders, loadedData = getDatasetLoaders(data_file, 64)\n",
+    "        \n",
+    "        testDays = np.arange(len(loadedData['competition']))\n",
+    "        \n",
     "        args.setdefault('mask_token_zero', False)\n",
     "\n",
     "        model.load_state_dict(torch.load(f\"{modelPath}/modelWeights\", map_location=device), strict=True)\n",
@@ -317,25 +301,29 @@
     "                        \"to_patch_embedding.3.weight\", \"to_patch_embedding.3.bias\"\n",
     "                    }\n",
     "\n",
-    "        testDayIdxs = np.arange(5)\n",
-    "        valDayIdxs = [0, 1, 3, 4, 5] if mn == 2 else [0, 1, 2, 3, 4]\n",
-    "\n",
+    "        testDayIdxs = np.arange(len(loadedData['test']))\n",
+    "            \n",
     "        model_outputs = {\"logits\": [], \"logitLengths\": [], \"trueSeqs\": [], \"transcriptions\": []}\n",
     "        \n",
-    "        total_edit_distance = total_seq_length = 0\n",
-    "        nbest_outputs = []\n",
-    "        nbest_outputs_val = []\n",
+    "        decoded_list_all_days = []\n",
+    "        transcripts_all_days = []\n",
     "        \n",
-    "        for i, testDayIdx in enumerate(testDayIdxs):\n",
+    "        for day_idx, testDayIdx in enumerate(testDayIdxs):\n",
     "            \n",
-    "            print(\"day \", i)\n",
-    "            \n",
-    "            ve = valDayIdxs[i]\n",
+    "            print(\"day \", day_idx)\n",
     "        \n",
-    "            val_ds = reverse_dataset(SpeechDataset([loadedData['test'][ve]], return_transcript=True))\n",
-    "            test_ds = reverse_dataset(SpeechDataset([loadedData['competition'][i]], return_transcript=True))\n",
-    "            combined_ds = ConcatDataset([val_ds, test_ds])\n",
-    "            data_loader = get_dataloader(combined_ds)\n",
+    "            val_ds = SpeechDataset([loadedData['test'][day_idx]], return_transcript=True)\n",
+    "            \n",
+    "            if day_idx in updated_args['comp_day_idxs']:\n",
+    "                test_day_idx = testDays[day_idx-1]\n",
+    "                test_ds = SpeechDataset([loadedData['competition'][test_day_idx]], return_transcript=True)\n",
+    "                combined_ds = ConcatDataset([test_ds, val_ds])\n",
+    "                data_loader = get_dataloader(combined_ds)\n",
+    "                test_idx = len(test_ds)\n",
+    "                \n",
+    "            else:                \n",
+    "                data_loader = get_dataloader(val_ds)\n",
+    "                test_idx = 0\n",
     "            \n",
     "            transcriptions_list = []\n",
     "            decoded_list = []\n",
@@ -347,14 +335,14 @@
     "                total_start = time.time()\n",
     "                \n",
     "                X, y, X_len, y_len = map(lambda x: x.to(device), [X, y, X_len, y_len])\n",
-    "                dayIdx = torch.tensor([ve], dtype=torch.int64).to(device)\n",
+    "                dayIdx = torch.tensor([day_idx], dtype=torch.int64).to(device)\n",
     "                adjusted_len = model.compute_length(X_len)\n",
     "                \n",
     "                # obtain beam search + LM corrected outputs\n",
     "                # do this before adaptation on that trial to make \n",
     "                # sure results are compatabile with a streaming system \n",
     "                model.eval()\n",
-    "                logits_eval = model(X, X_len, ve)\n",
+    "                logits_eval = model(X, X_len, day_idx)\n",
     "                decoded, y_pseudo, y_len_pseudo = get_lm_outputs(logits_eval)\n",
     "                \n",
     "                if tta_mode != 'baseline':\n",
@@ -388,7 +376,7 @@
     "\n",
     "                    for _ in range(updated_args['adaptation_steps']):\n",
     "                \n",
-    "                        logits = model(X, X_len, ve)\n",
+    "                        logits = model(X, X_len, day_idx)\n",
     "                        \n",
     "                        corp_loss = forward_ctc(logits, adjusted_len, y_pseudo, y_len_pseudo)\n",
     "                        \n",
@@ -399,30 +387,103 @@
     "                model.eval()\n",
     "                \n",
     "                # get validation performance \n",
-    "                if trial_idx < len(val_ds):\n",
-    "     \n",
+    "                if trial_idx > test_idx:\n",
+    "\n",
     "                    decoded_list.append(decoded)\n",
     "                    transcriptions_list.append(clean_transcription(transcript[0]))\n",
-    "\n",
-    "                else:   \n",
-    "                    \n",
-    "                    test_day_decoded_sents.append(decoded)\n",
     "                        \n",
     "            _, wer = _cer_and_wer(decoded_list, transcriptions_list, outputType=\"speech\", returnCI=False)\n",
     "            print(\"DAY WER: \", wer)\n",
-    "            day_cer_dict[seed].append(wer)\n",
-    "            nbest_outputs.extend(test_day_decoded_sents[::-1]) # reverse each day back\n",
+    "            day_wer_dict[seed].append(wer)\n",
     "            \n",
-    "        out_file = os.path.join(saveFolder_transcripts, output_file)\n",
-    "        with open(out_file + '.txt', write_mode, encoding=\"utf-8\") as f:\n",
-    "            f.write(\"\\n\".join(nbest_outputs) + \"\\n\")\n",
+    "            decoded_list_all_days.extend(decoded_list)\n",
+    "            transcripts_all_days.extend(transcriptions_list)\n",
+    "            \n",
+    "        _, wer_total = _cer_and_wer(decoded_list_all_days, transcripts_all_days, outputType=\"speech\", returnCI=False)\n",
+    "        total_wer_dict[seed] = wer_total\n",
+    "        print(\"WER ACROSS DAYS: \", wer_total)\n",
     "        \n",
-    "        \n",
+    "\n",
     "    if val_save_file:\n",
+    "        \n",
     "        print(f\"SAVING VAL RESULTS FOR {model_name_str}\")\n",
     "        with open(f\"{saveFolder_data}{model_name_str}_{val_save_file}.pkl\", \"wb\") as f:\n",
-    "            pickle.dump(day_cer_dict, f)\n",
+    "            pickle.dump(day_wer_dict, f)\n",
+    "        with open(f\"{saveFolder_data}{model_name_str}_{val_save_file}_all_days.pkl\", \"wb\") as f:\n",
+    "            pickle.dump(total_wer_dict, f)\n",
     "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "day  0\n",
+    "DAY WER:  0.23643122676579925\n",
+    "day  1\n",
+    "DAY WER:  0.2644028996566196\n",
+    "day  2\n",
+    "DAY WER:  0.2719836400817996\n",
+    "day  3\n",
+    "DAY WER:  0.27292981804678795\n",
+    "day  4\n",
+    "DAY WER:  0.3243121335137573\n",
+    "day  5\n",
+    "DAY WER:  0.31900138696255204\n",
+    "day  6\n",
+    "DAY WER:  0.404019404019404\n",
+    "day  7\n",
+    "DAY WER:  0.46174946662602867\n",
+    "day  8\n",
+    "DAY WER:  0.49850209706411025\n",
+    "WER ACROSS DAYS:  0.3518153793457784"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TTA\n",
+    "Running model: transformer_held_out_big_0_seed_0\n",
+    "0.001\n",
+    "day  0\n",
+    "DAY WER:  0.26930935839803843\n",
+    "day  1\n",
+    "DAY WER:  0.27941805733846814\n",
+    "day  2\n",
+    "DAY WER:  0.28998505231689087\n",
+    "day  3\n",
+    "DAY WER:  0.2869888475836431\n",
+    "day  4\n",
+    "DAY WER:  0.304845478824876\n",
+    "day  5\n",
+    "DAY WER:  0.2959524693650204\n",
+    "day  6\n",
+    "DAY WER:  0.27514659449706813\n",
+    "day  7\n",
+    "DAY WER:  0.3028201571890892\n",
+    "\n",
+    "# no TTA\n",
+    "day  0\n",
+    "DAY WER:  0.3069064160196159\n",
+    "day  1\n",
+    "DAY WER:  0.3513050919982884\n",
+    "day  2\n",
+    "DAY WER:  0.44170403587443946\n",
+    "day  3\n",
+    "DAY WER:  0.5234200743494424\n",
+    "day  4\n",
+    "DAY WER:  0.5742083174360931\n",
+    "day  5\n",
+    "DAY WER:  0.5339769773486818\n",
+    "day  6\n",
+    "DAY WER:  0.6220117275597654\n",
+    "day  7\n",
+    "DAY WER:  0.6574202496532594"
    ]
   },
   {
