--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "id": "4316910d",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "id": "d1f89411",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
        "True"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "id": "79569a03",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "id": "edb2175e",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "id": "e6305c7d",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "id": "20398fe1",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "id": "1cf55fa2",
    "metadata": {},
    "outputs": [],
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "id": "6bc86d8c",
    "metadata": {},
    "outputs": [],
@@ -600,6 +600,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "edd61f79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['t12.2022.04.28',\n",
+       " 't12.2022.05.05',\n",
+       " 't12.2022.05.17',\n",
+       " 't12.2022.05.19',\n",
+       " 't12.2022.05.24',\n",
+       " 't12.2022.05.26',\n",
+       " 't12.2022.06.02',\n",
+       " 't12.2022.06.07',\n",
+       " 't12.2022.06.14',\n",
+       " 't12.2022.06.16',\n",
+       " 't12.2022.06.21',\n",
+       " 't12.2022.06.23',\n",
+       " 't12.2022.06.28',\n",
+       " 't12.2022.07.05',\n",
+       " 't12.2022.07.14',\n",
+       " 't12.2022.07.21',\n",
+       " 't12.2022.07.27',\n",
+       " 't12.2022.07.29',\n",
+       " 't12.2022.08.02',\n",
+       " 't12.2022.08.11',\n",
+       " 't12.2022.08.13',\n",
+       " 't12.2022.08.18',\n",
+       " 't12.2022.08.23',\n",
+       " 't12.2022.08.25']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sessionNames"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "1e25c8e4",
@@ -610,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 14,
    "id": "87c7d480",
    "metadata": {},
    "outputs": [
@@ -650,162 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "dab5bf89",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12\n",
-      "13\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_days_condition_1 = ['t12.2022.04.28',\n",
-    " 't12.2022.05.05',\n",
-    " 't12.2022.05.17',\n",
-    " 't12.2022.05.19',\n",
-    " 't12.2022.05.24',\n",
-    " 't12.2022.05.26',\n",
-    " 't12.2022.06.02',\n",
-    " 't12.2022.06.07',\n",
-    " 't12.2022.06.14',\n",
-    " 't12.2022.06.16',\n",
-    " 't12.2022.06.21',\n",
-    " 't12.2022.06.23']\n",
-    "\n",
-    "print(len(train_days_condition_1))\n",
-    "\n",
-    "train_days_condition_2 = [\n",
-    " 't12.2022.06.23',\n",
-    " 't12.2022.06.28',\n",
-    " 't12.2022.07.05',\n",
-    " 't12.2022.07.14',\n",
-    " 't12.2022.07.21',\n",
-    " 't12.2022.07.27',\n",
-    " 't12.2022.07.29',\n",
-    " 't12.2022.08.02',\n",
-    " 't12.2022.08.11',\n",
-    " 't12.2022.08.13',\n",
-    " 't12.2022.08.18',\n",
-    " 't12.2022.08.23',\n",
-    " 't12.2022.08.25']\n",
-    "\n",
-    "print(len(train_days_condition_2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "id": "d7f96acb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EVAL t12.2022.05.24\n",
-      "EVAL t12.2022.05.26\n",
-      "EVAL t12.2022.06.02\n",
-      "EVAL t12.2022.06.07\n",
-      "EVAL t12.2022.06.14\n",
-      "TRAIN t12.2022.06.16\n",
-      "TRAIN t12.2022.06.21\n",
-      "TRAIN t12.2022.06.23\n",
-      "TRAIN t12.2022.06.28\n",
-      "TRAIN t12.2022.07.05\n",
-      "TRAIN t12.2022.07.14\n",
-      "TRAIN t12.2022.07.21\n",
-      "TRAIN t12.2022.07.27\n",
-      "TRAIN t12.2022.07.29\n",
-      "TRAIN t12.2022.08.02\n",
-      "TRAIN t12.2022.08.11\n",
-      "TRAIN t12.2022.08.13\n",
-      "TRAIN t12.2022.08.18\n",
-      "TRAIN t12.2022.08.23\n",
-      "TRAIN t12.2022.08.25\n",
-      "5 15\n"
-     ]
-    }
-   ],
-   "source": [
-    "trainDatasets = []\n",
-    "testDatasets = []\n",
-    "competitionDatasets = []\n",
-    "\n",
-    "held_out_run_set = 0\n",
-    "\n",
-    "# in the first condition, include up to the last 5 competition days in the training data\n",
-    "if held_out_run_set == 0:\n",
-    "\n",
-    "    train_days = train_days_condition_1\n",
-    "    \n",
-    "elif held_out_run_set == 1:\n",
-    "\n",
-    "    train_days = train_days_condition_2\n",
-    "    \n",
-    "train_days_count = 0\n",
-    "eval_days_count = 0\n",
-    "for dayIdx in range(len(sessionNames)):\n",
-    "\n",
-    "    if sessionNames[dayIdx] in train_days:\n",
-    "        \n",
-    "        print(\"TRAIN\", sessionNames[dayIdx])\n",
-    "        train_days_count += 1\n",
-    "        # put both train and test data for non held-out days into train\n",
-    "        trainDataset1 = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
-    "        trainDataset2 = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
-    "        trainDataset = combine_dicts(trainDataset1, trainDataset2)\n",
-    "        trainDatasets.append(trainDataset)\n",
-    "        \n",
-    "        \n",
-    "    elif dayIdx in competitionDays:\n",
-    "        \n",
-    "        eval_days_count += 1\n",
-    "\n",
-    "        print(\"EVAL\", sessionNames[dayIdx])\n",
-    "            \n",
-    "        # put both train and test data for held-out days into \"test (really val)\".\n",
-    "        testDataset1 = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
-    "        testDataset2 = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
-    "        \n",
-    "        testDataset = combine_dicts(testDataset1, testDataset2)\n",
-    "        testDatasets.append(testDataset)\n",
-    "        \n",
-    "        # only testing on these held-out days now. \n",
-    "        if os.path.exists(dataDir + '/competitionHoldOut/' + sessionNames[dayIdx] + '.mat'):\n",
-    "            dataset = getDataset(dataDir + '/competitionHoldOut/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
-    "            competitionDatasets.append(dataset)\n",
-    "        \n",
-    "print(eval_days_count, train_days_count)\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "id": "9f1e9c64",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "allDatasets = {}\n",
-    "allDatasets['train'] = trainDatasets\n",
-    "allDatasets['test'] = testDatasets\n",
-    "allDatasets['competition'] = competitionDatasets\n",
-    "\n",
-    "dataSave_held_out_days = f\"{dataSave}_held_out_days_big_{held_out_run_set}\"\n",
-    "    \n",
-    "with open(dataSave_held_out_days, 'wb') as handle:\n",
-    "    pickle.dump(allDatasets, handle)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 15,
    "id": "d91fbc44",
    "metadata": {},
    "outputs": [
@@ -822,12 +711,23 @@
       "Train t12.2022.06.02 in train\n",
       "Train t12.2022.06.07 in train\n",
       "Train t12.2022.06.14 in train\n",
-      "Placing t12.2022.06.16 in test/comp\n",
-      "Placing t12.2022.06.21 in test/comp\n",
-      "Skipping day:  06.23\n",
-      "Placing t12.2022.06.28 in test/comp\n",
-      "Placing t12.2022.07.05 in test/comp\n",
-      "Placing t12.2022.07.14 in test/comp\n"
+      "Train t12.2022.06.16 in train\n",
+      "Train t12.2022.06.21 in train\n",
+      "Train t12.2022.06.23 in train\n",
+      "Train t12.2022.06.28 in train\n",
+      "Train t12.2022.07.05 in train\n",
+      "Train t12.2022.07.14 in train\n",
+      "Placing t12.2022.07.21 in test/comp\n",
+      "Placing t12.2022.07.27 in test/comp\n",
+      "Placing t12.2022.07.29 in test/comp\n",
+      "Placing t12.2022.08.02 in test/comp\n",
+      "Placing t12.2022.08.11 in test/comp\n",
+      "Placing t12.2022.08.13 in test/comp\n",
+      "Train t12.2022.08.18 in train\n",
+      "Train t12.2022.08.23 in train\n",
+      "Train t12.2022.08.25 in train\n",
+      "Training days:  18\n",
+      "Eval days:  6\n"
      ]
     }
    ],
@@ -836,34 +736,15 @@
     "testDatasets = []\n",
     "competitionDatasets = []\n",
     "\n",
-    "held_out_run_set = 1\n",
+    "evaluation_days = ['07.21', '07.27', '07.29', '08.02', '08.11', '08.13'] \n",
     "\n",
-    "if held_out_run_set == 0:\n",
-    "\n",
-    "    evaluation_days = ['07.21', '07.27', '07.29', '08.02', '08.11', '08.13'] \n",
-    "    skip_days = ['07.29']\n",
-    "    loop_until = -3\n",
-    "    \n",
-    "elif held_out_run_set == 1:\n",
-    "    \n",
-    "    evaluation_days = ['06.16', '06.21', '06.28', '07.05', '07.14']\n",
-    "    skip_days = ['06.23']\n",
-    "    loop_until = -9\n",
-    "    \n",
-    "elif held_out_run_set == 2:\n",
-    "    \n",
-    "    evaluation_days = ['05.24', '05.26', '06.02', '06.07', '06.14']\n",
-    "    loop_until = -15\n",
-    "\n",
-    "\n",
-    "# skipping the last 3 days because they are not historical data. \n",
-    "for dayIdx in range(len(sessionNames[:loop_until])):\n",
-    "    \n",
-    "    if sessionNames[dayIdx][-5:] in skip_days:\n",
-    "        print(\"Skipping day: \", sessionNames[dayIdx][-5:])\n",
-    "        continue\n",
-    "    \n",
+    "trainCount = 0\n",
+    "evalCount = 0\n",
+    "for dayIdx in range(len(sessionNames[:-3])):\n",
+    "        \n",
     "    if sessionNames[dayIdx][-5:] in evaluation_days:\n",
+    "        \n",
+    "        evalCount += 1\n",
     "        \n",
     "        print(f\"Placing {sessionNames[dayIdx]} in test/comp\")\n",
     "        \n",
@@ -880,29 +761,27 @@
     "            \n",
     "    else:\n",
     "        \n",
+    "        trainCount += 1\n",
+    "        \n",
     "        print(f\"Train {sessionNames[dayIdx]} in train\")\n",
     "        \n",
     "        # put both train and test data for non held-out days into train\n",
     "        trainDataset1 = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
     "        trainDataset2 = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
     "        trainDataset = combine_dicts(trainDataset1, trainDataset2)\n",
-    "        trainDatasets.append(trainDataset)"
+    "        trainDatasets.append(trainDataset)\n",
+    "        \n",
+    "        \n",
+    "print(\"Training days: \", trainCount)\n",
+    "print(\"Eval days: \", evalCount)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 13,
    "id": "81af6595",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "allDatasets = {}\n",
@@ -910,11 +789,7 @@
     "allDatasets['test'] = testDatasets\n",
     "allDatasets['competition'] = competitionDatasets\n",
     "\n",
-    "if held_out_run_set > 0:\n",
-    "    print(\"hi\")\n",
-    "    dataSave_held_out_days = f\"{dataSave}_held_out_days_{held_out_run_set}\"\n",
-    "else:\n",
-    "    dataSave_held_out_days = f\"{dataSave}_held_out_days\"\n",
+    "dataSave_held_out_days = f\"{dataSave}_held_out_days\"\n",
     "    \n",
     "with open(dataSave_held_out_days, 'wb') as handle:\n",
     "    pickle.dump(allDatasets, handle)"
