--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -10,13 +10,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/data/willett_data/competitionData/ /data/willett_data/ptDecoder_ctc_both\n"
+      "/data/willett_data/competitionData/ /data/willett_data/ptDecoder_ctc\n"
      ]
     }
    ],
    "source": [
     "server = 'obi'\n",
-    "logBoth = True\n",
+    "logBoth = False\n",
     "\n",
     "if server == 'obi':\n",
     "    dataDir = '/data/willett_data/competitionData/'\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "815eca0e",
    "metadata": {},
    "outputs": [],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "edd61f79",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
        " 't12.2022.08.25']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "87c7d480",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "d91fbc44",
    "metadata": {},
    "outputs": [
@@ -702,6 +702,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "False\n",
       "Train t12.2022.04.28 in train\n",
       "Train t12.2022.05.05 in train\n",
       "Train t12.2022.05.17 in train\n",
@@ -714,20 +715,17 @@
       "Train t12.2022.06.16 in train\n",
       "Train t12.2022.06.21 in train\n",
       "Train t12.2022.06.23 in train\n",
-      "Train t12.2022.06.28 in train\n",
-      "Train t12.2022.07.05 in train\n",
-      "Train t12.2022.07.14 in train\n",
+      "Placing t12.2022.06.28 in test/comp\n",
+      "Placing t12.2022.07.05 in test/comp\n",
+      "Placing t12.2022.07.14 in test/comp\n",
       "Placing t12.2022.07.21 in test/comp\n",
       "Placing t12.2022.07.27 in test/comp\n",
-      "Placing t12.2022.07.29 in test/comp\n",
+      "Skipping day:  07.29\n",
       "Placing t12.2022.08.02 in test/comp\n",
       "Placing t12.2022.08.11 in test/comp\n",
       "Placing t12.2022.08.13 in test/comp\n",
-      "Train t12.2022.08.18 in train\n",
-      "Train t12.2022.08.23 in train\n",
-      "Train t12.2022.08.25 in train\n",
-      "Training days:  18\n",
-      "Eval days:  6\n"
+      "Training days:  12\n",
+      "Eval days:  8\n"
      ]
     }
    ],
@@ -736,11 +734,23 @@
     "testDatasets = []\n",
     "competitionDatasets = []\n",
     "\n",
-    "evaluation_days = ['07.21', '07.27', '07.29', '08.02', '08.11', '08.13'] \n",
+    "condition = 1\n",
+    "\n",
+    "if condition == 0:\n",
+    "    evaluation_days = ['07.21', '07.27', '08.02', '08.11', '08.13'] \n",
+    "if condition == 1:\n",
+    "    evaluation_days = ['06.28', '07.05', '07.14', '07.21', '07.27', '08.02', '08.11', '08.13'] \n",
+    "    \n",
+    "skip_days = ['07.29']\n",
     "\n",
     "trainCount = 0\n",
     "evalCount = 0\n",
+    "print(logBoth)\n",
     "for dayIdx in range(len(sessionNames[:-3])):\n",
+    "    \n",
+    "    if sessionNames[dayIdx][-5:] in skip_days:\n",
+    "        print(\"Skipping day: \", sessionNames[dayIdx][-5:])\n",
+    "        continue\n",
     "        \n",
     "    if sessionNames[dayIdx][-5:] in evaluation_days:\n",
     "        \n",
@@ -778,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "81af6595",
    "metadata": {},
    "outputs": [],
@@ -789,15 +799,19 @@
     "allDatasets['test'] = testDatasets\n",
     "allDatasets['competition'] = competitionDatasets\n",
     "\n",
-    "dataSave_held_out_days = f\"{dataSave}_held_out_days\"\n",
+    "if condition == 0: \n",
+    "    dataSave_held_out_days = f\"{dataSave}_held_out_days\"\n",
+    "if condition == 1:\n",
+    "    dataSave_held_out_days = f\"{dataSave}_held_out_days_big_0\"\n",
     "    \n",
+    "print(dataSave_held_out_days)\n",
     "with open(dataSave_held_out_days, 'wb') as handle:\n",
     "    pickle.dump(allDatasets, handle)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 17,
    "id": "0c9838a8",
    "metadata": {},
    "outputs": [
